[project]
name = "ekantipur-scraper"
version = "0.1.0"
description = "Scrapes top entertainment news and cartoon of the day from ekantipur.com"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Lokesh Sejuwal", email = "sejuwallokesh84@gmail.com"}
]
license = "MIT"
dependencies = [
    "playwright>=1.58.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"